--- a/invoice-builder.html
+++ b/invoice-builder.html
@@ -978,6 +978,7 @@
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
               <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
               <a href="pleb-release">📰 Pleb Release</a>
+              <a href="interest-arbitrage-calculator">💹 Yield Arbitrage</a>
               <a href="invoice-builder" class="active">🧾 Invoice Builder</a>
             </div>
           </div>
@@ -1184,14 +1185,20 @@
               <h4>Where to learn</h4>
               <a href="https://www.youtube.com/@bitcoinnotcrypto" target="_blank" class="affiliate-link">YouTube</a>
             </div>
-            <div class="affiliate-item">
-              <h4>Earn free BTC</h4>
-              <a href="https://satsarcade.app/" target="_blank" class="affiliate-link">Sats Arcade</a>
-            </div>
-            <div class="affiliate-item">
-              <h4>How to support</h4>
-              <a href="https://coinos.io/plebtools" target="_blank" class="affiliate-link">Donate</a>
-            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="support-section">
+        <div class="container support-grid">
+          <div class="support-card">
+            <div class="support-icon">⚡</div>
+            <h2 class="support-title">Support Plebtools</h2>
+            <p class="support-text">
+              Enjoying these tools? You can help keep them free and open source by donating sats.
+              Every contribution fuels more Bitcoin-first development.
+            </p>
+            <a href="https://coinos.io/plebtools" target="_blank" class="support-btn">Donate ⚡</a>
           </div>
         </div>
       </section>
