--- a/account.html
+++ b/account.html
@@ -158,6 +158,7 @@
               <a href="financial-planner">📋 Financial Planner</a>
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
               <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
+              <a href="interest-arbitrage-calculator">💹 Yield Arbitrage</a>
               <a href="invoice-builder">🧾 Invoice Builder</a>
               <a href="pleb-release">📰 Pleb Release</a>
             </div>
@@ -238,17 +239,35 @@
               <h4>Where to learn</h4>
               <a href="https://www.youtube.com/@bitcoinnotcrypto" target="_blank" class="affiliate-link">YouTube</a>
             </div>
-            <div class="affiliate-item">
-              <h4>Earn free BTC</h4>
-              <a href="https://satsarcade.app/" target="_blank" class="affiliate-link">Sats Arcade</a>
-            </div>
-            <div class="affiliate-item">
-              <h4>How to support</h4>
-              <a href="https://coinos.io/plebtools" target="_blank" class="affiliate-link">Donate</a>
-            </div>
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="support-section">
+    <div class="container support-grid">
+      <div class="support-card">
+        <div class="support-icon">⚡</div>
+        <h2 class="support-title">Support Plebtools</h2>
+        <p class="support-text">
+          Enjoying these tools? You can help keep them free and open source by donating sats.
+          Every contribution fuels more Bitcoin-first development.
+        </p>
+        <a href="https://coinos.io/plebtools" target="_blank" class="support-btn">Donate ⚡</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="features-section" style="margin-top: 1.5rem;">
+    <div class="container" style="text-align: center;">
+      <h2 class="section-title">Open Source</h2>
+      <p style="max-width: 600px; margin: 1rem auto; color: #475569;">
+        This Bitcoin account system is free and open source so anyone can adapt it for their own treasury workflows.
+      </p>
+      <a href="https://github.com/ForrestHODL/Plebtools" target="_blank" class="affiliate-link" style="display: inline-block;">
+        View on GitHub
+      </a>
     </div>
   </section>
 
