--- a/bitcoin-storage.html
+++ b/bitcoin-storage.html
@@ -128,6 +128,69 @@
         .dark-theme .key-display {
             background: rgba(0, 0, 0, 0.5);
         }
+
+        .affiliate-link:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 24px rgba(59, 130, 246, 0.3);
+        }
+
+        .support-section {
+            padding: 4rem 0;
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.96) 0%, rgba(30, 41, 59, 0.98) 100%);
+        }
+
+        .support-grid {
+            max-width: 720px;
+            margin: 0 auto;
+        }
+
+        .support-card {
+            background: rgba(30, 41, 59, 0.92);
+            border: 1px solid rgba(148, 163, 184, 0.25);
+            border-radius: 18px;
+            padding: 2.25rem;
+            text-align: center;
+            box-shadow: 0 28px 60px -30px rgba(15, 23, 42, 0.6);
+            color: #e2e8f0;
+        }
+
+        .support-icon {
+            font-size: 2.4rem;
+            margin-bottom: 1rem;
+        }
+
+        .support-title {
+            font-size: 1.6rem;
+            color: #f8fafc;
+            letter-spacing: 0.05em;
+            margin-bottom: 1rem;
+        }
+
+        .support-text {
+            color: #cbd5f5;
+            font-size: 1rem;
+            margin: 1rem 0 2rem;
+            line-height: 1.6;
+        }
+
+        .support-btn {
+            display: inline-block;
+            padding: 0.9rem 2.2rem;
+            border-radius: 999px;
+            background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
+            color: #f8fafc;
+            text-decoration: none;
+            font-weight: 600;
+            letter-spacing: 0.04em;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 18px 35px -18px rgba(249, 115, 22, 0.55);
+        }
+
+        .support-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 22px 45px -20px rgba(249, 115, 22, 0.65);
+            color: #f8fafc;
+        }
     </style>
 </head>
 
@@ -155,6 +218,7 @@
                             <a href="financial-planner">📋 Financial Planner</a>
                             <a href="bitcoin-security">🛡️ Bitcoin Security</a>
                             <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
+                            <a href="interest-arbitrage-calculator">💹 Yield Arbitrage</a>
                             <a href="invoice-builder">🧾 Invoice Builder</a>
                             <a href="pleb-release">📰 Pleb Release</a>
                         </div>
@@ -283,8 +347,6 @@
                                 <h4>How to validate</h4><a href="https://store.start9.com/" target="_blank"
                                     class="affiliate-link">Start9</a>
                                 <p class="discount-code">CODE: BNC5 for 5% off</p>
-                                <a href="https://www.solosatoshi.com/aff/2279/" target="_blank"
-                                    class="affiliate-link">Buy a BitAxe</a>
                             </div>
                             <div class="affiliate-item">
                                 <h4>1:1 Coaching</h4><a href="https://pathtobitcoin.xyz" target="_blank"
@@ -294,37 +356,44 @@
                                 <h4>Where to learn</h4><a href="https://www.youtube.com/@bitcoinnotcrypto"
                                     target="_blank" class="affiliate-link">YouTube</a>
                             </div>
-                            <div class="affiliate-item">
-                                <h4>Earn free BTC</h4><a href="https://satsarcade.app/" target="_blank"
-                                    class="affiliate-link">Sats Arcade</a>
-                            </div>
-                            <div class="affiliate-item">
-                                <h4>How to support</h4><a href="https://coinos.io/plebtools" target="_blank"
-                                    class="affiliate-link">Donate</a>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Open Source Section -->
-            <div class="feature-card">
-                <span class="feature-icon">🚀</span>
-                <h3 class="feature-title">Open Source</h3>
-                <p class="feature-description">
-                    Free and open source tools that you can customize, deploy,
-                    and contribute to. Built by the community, for the community.
-                </p>
-                <a href="https://github.com/ForrestHODL/Plebtools" target="_blank" class="feature-btn">View on
-                    GitHub</a>
-            </div>
         </div>
     </main>
+
+    <section class="support-section">
+        <div class="container support-grid">
+            <div class="support-card">
+                <div class="support-icon">⚡</div>
+                <h2 class="support-title">Support Plebtools</h2>
+                <p class="support-text">
+                    Enjoying these tools? You can help keep them free and open source by donating sats.
+                    Every contribution fuels more Bitcoin-first development.
+                </p>
+                <a href="https://coinos.io/plebtools" target="_blank" class="support-btn">Donate ⚡</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Open Source Section -->
+    <div class="feature-card" style="max-width: 720px; margin: 0 auto 4rem auto; text-align: center;">
+        <span class="feature-icon">🚀</span>
+        <h3 class="feature-title">Open Source</h3>
+        <p class="feature-description" style="color: inherit;">
+            Free and open source tools that you can customize, deploy,
+            and contribute to. Built by the community, for the community.
+        </p>
+        <a href="https://github.com/ForrestHODL/Plebtools" target="_blank" class="feature-btn">View on
+            GitHub</a>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2024 Plebtools. All rights reserved.</p>
+            <p>&copy; 2024 Plebtools. Secure your Bitcoin the right way.</p>
         </div>
     </footer>
 
