--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -446,6 +446,68 @@
         .dark-theme .open-source-text {
             color: white !important;
         }
+
+        .discount-code {
+            font-size: 0.85rem;
+            color: #94a3b8;
+            margin-top: 0.8rem;
+        }
+
+        .support-section {
+            padding: 4rem 0;
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.96) 0%, rgba(30, 41, 59, 0.98) 100%);
+        }
+
+        .support-grid {
+            max-width: 720px;
+            margin: 0 auto;
+        }
+
+        .support-card {
+            background: rgba(30, 41, 59, 0.92);
+            border: 1px solid rgba(148, 163, 184, 0.25);
+            border-radius: 18px;
+            padding: 2.25rem;
+            text-align: center;
+            box-shadow: 0 28px 60px -30px rgba(15, 23, 42, 0.6);
+            color: #e2e8f0;
+        }
+
+        .support-icon {
+            font-size: 2.4rem;
+            margin-bottom: 1rem;
+        }
+
+        .support-title {
+            font-size: 1.6rem;
+            color: #f8fafc;
+            letter-spacing: 0.05em;
+            margin-bottom: 1rem;
+        }
+
+        .support-text {
+            color: #cbd5f5;
+            font-size: 1rem;
+            margin: 1rem 0 2rem;
+            line-height: 1.6;
+        }
+
+        .support-btn {
+            display: inline-block;
+            padding: 0.75rem 2.4rem;
+            border-radius: 999px;
+            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            color: #fff;
+            font-weight: 600;
+            text-decoration: none;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 18px 48px -24px rgba(34, 197, 94, 0.65);
+        }
+
+        .support-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 28px 60px -30px rgba(34, 197, 94, 0.65);
+        }
     </style>
 </head>
 <body>
@@ -469,6 +531,7 @@
               <a href="btc-loan-ltv">🔒 BTC Loans</a>
               <a href="financial-planner">📋 Financial Planner</a>
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
+              <a href="interest-arbitrage-calculator">💹 Yield Arbitrage</a>
               <a href="invoice-builder">🧾 Invoice Builder</a>
               <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
               <a href="pleb-release">📰 Pleb Release</a>
@@ -684,15 +747,21 @@
                             <h4>Where to learn</h4>
                             <a href="https://www.youtube.com/@bitcoinnotcrypto" target="_blank" class="affiliate-link">YouTube</a>
                         </div>
-                        <div class="affiliate-item">
-                            <h4>Earn free BTC</h4>
-                            <a href="https://satsarcade.app/" target="_blank" class="affiliate-link">Sats Arcade</a>
-                        </div>
-                        <div class="affiliate-item">
-                            <h4>How to support</h4>
-                            <a href="https://coinos.io/plebtools" target="_blank" class="affiliate-link">Donate</a>
-                        </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="support-section">
+        <div class="container support-grid">
+            <div class="support-card">
+                <div class="support-icon">⚡</div>
+                <h2 class="support-title">Support Plebtools</h2>
+                <p class="support-text">
+                    Enjoying these tools? You can help keep them free and open source by donating sats.
+                    Every contribution fuels more Bitcoin-first development.
+                </p>
+                <a href="https://coinos.io/plebtools" target="_blank" class="support-btn">Donate ⚡</a>
             </div>
         </div>
     </section>
