--- a/home.html
+++ b/home.html
@@ -125,8 +125,8 @@
   <style>
     /* Home page specific styles */
     .hero-section {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      background: linear-gradient(135deg, #ffffff 0%, #f8fafc 100%);
+      color: #1f2937;
       padding: 120px 0 80px;
       text-align: center;
       position: relative;
@@ -140,8 +140,8 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="10" height="10" patternUnits="userSpaceOnUse"><path d="M 10 0 L 0 0 0 10" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="0.5"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>');
-      opacity: 0.3;
+      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="10" height="10" patternUnits="userSpaceOnUse"><path d="M 10 0 L 0 0 0 10" fill="none" stroke="rgba(15,23,42,0.08)" stroke-width="0.5"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>');
+      opacity: 0.22;
     }
 
     .hero-content {
@@ -177,34 +177,31 @@
     .hero-btn {
       display: inline-block;
       padding: 1rem 2rem;
-      background: rgba(255, 255, 255, 0.2);
-      color: white;
+      background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
+      color: #ffffff;
       text-decoration: none;
       border-radius: 50px;
       font-weight: bold;
       font-size: 1.1rem;
       transition: all 0.3s ease;
-      border: 2px solid rgba(255, 255, 255, 0.3);
-      backdrop-filter: blur(10px);
+      border: none;
+      box-shadow: 0 10px 25px rgba(249, 115, 22, 0.35);
     }
 
     .hero-btn:hover {
-      background: rgba(255, 255, 255, 0.3);
       transform: translateY(-3px);
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      color: white;
+      box-shadow: 0 15px 35px rgba(249, 115, 22, 0.45);
+      color: #ffffff;
       text-decoration: none;
     }
 
     .hero-btn.primary {
-      background: rgba(255, 255, 255, 0.9);
-      color: #667eea;
-      border-color: rgba(255, 255, 255, 0.9);
+      background: linear-gradient(135deg, #f97316 0%, #ea580c 100%);
+      color: #ffffff;
     }
 
     .hero-btn.primary:hover {
-      background: white;
-      color: #667eea;
+      background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
     }
 
     .features-section {
@@ -258,18 +255,19 @@
     .feature-btn {
       display: inline-block;
       padding: 0.8rem 1.5rem;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
+      color: #ffffff;
       text-decoration: none;
       border-radius: 25px;
       font-weight: bold;
       transition: all 0.3s ease;
+      box-shadow: 0 8px 22px rgba(249, 115, 22, 0.35);
     }
 
     .feature-btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
-      color: white;
+      box-shadow: 0 12px 30px rgba(249, 115, 22, 0.45);
+      color: #ffffff;
       text-decoration: none;
     }
 
@@ -341,33 +339,33 @@
     .cta-btn {
       display: inline-block;
       padding: 1rem 2rem;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
+      color: #ffffff;
       text-decoration: none;
       border-radius: 50px;
       font-weight: bold;
       font-size: 1.1rem;
       transition: all 0.3s ease;
-      box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+      box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
     }
 
     .cta-btn:hover {
       transform: translateY(-3px);
-      box-shadow: 0 10px 30px rgba(102, 126, 234, 0.6);
-      color: white;
+      box-shadow: 0 15px 40px rgba(249, 115, 22, 0.5);
+      color: #ffffff;
       text-decoration: none;
     }
 
     .cta-btn.secondary {
       background: transparent;
-      color: #667eea;
-      border: 2px solid #667eea;
+      color: #f97316;
+      border: 2px solid #f97316;
       box-shadow: none;
     }
 
     .cta-btn.secondary:hover {
-      background: #667eea;
-      color: white;
+      background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
+      color: #ffffff;
     }
 
     /* Mobile responsiveness */
@@ -447,57 +445,73 @@
     /* Affiliate Links Section */
     .affiliate-links {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-      margin-top: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.2rem;
+      max-width: 720px;
+      margin: 0 auto;
     }
 
     .affiliate-item {
-      background: white;
+      background: #f7f9ff;
+      border: 1px solid #e1e7ff;
+      border-radius: 16px;
       padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
       text-align: center;
-      transition: transform 0.3s ease;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+      box-shadow: 0 24px 50px -30px rgba(66, 78, 132, 0.3);
+    }
+
+    .dark-theme .affiliate-item {
+      background: #3d3d3d;
+      border-color: rgba(148, 163, 184, 0.25);
+      box-shadow: 0 24px 50px -28px rgba(15, 23, 42, 0.55);
     }
 
     .affiliate-item:hover {
-      transform: translateY(-3px);
+      transform: translateY(-6px);
+      box-shadow: 0 28px 60px -32px rgba(66, 78, 132, 0.35);
     }
 
     .affiliate-item h4 {
-      color: #667eea;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.9rem;
+      font-weight: 700;
+      color: #2c3a6d;
       font-size: 1rem;
-      font-weight: bold;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+    }
+
+    .dark-theme .affiliate-item h4 {
+      color: #667eea;
     }
 
     .affiliate-link {
       display: inline-block;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%);
+      color: #ffffff;
+      padding: 0.6rem 1.4rem;
+      border-radius: 999px;
       text-decoration: none;
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      font-size: 0.9rem;
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-      transition: all 0.3s ease;
-      box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
+      font-weight: 600;
+      letter-spacing: 0.05em;
+      transition: transform 0.2s, box-shadow 0.2s;
+      box-shadow: 0 16px 40px -22px rgba(59, 130, 246, 0.55);
     }
 
     .affiliate-link:hover {
       transform: translateY(-2px);
-      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
-      color: white;
-      text-decoration: none;
+      box-shadow: 0 18px 50px -24px rgba(59, 130, 246, 0.65);
     }
 
     .discount-code {
-      font-size: 0.8rem;
-      color: #667eea;
-      font-weight: bold;
-      margin: 0.5rem 0 0 0;
+      margin-top: 0.7rem;
+      font-size: 0.82rem;
+      color: #64748b;
+      letter-spacing: 0.05em;
+    }
+
+    .dark-theme .discount-code {
+      color: rgba(148, 163, 184, 0.9);
     }
 
     /* Mobile responsiveness for affiliate links */
@@ -517,23 +531,10 @@
       }
     }
 
-    .dark-theme .affiliate-item {
-      background: #3d3d3d;
-      color: #e0e0e0;
-    }
-
-    .dark-theme .affiliate-item h4 {
-      color: #667eea;
-    }
-
-    .dark-theme .discount-code {
-      color: #888 !important;
-    }
-
     /* Contact Section Styles */
     .contact-section {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      background: linear-gradient(135deg, #ffffff 0%, #f3f4f6 100%);
+      color: #1f2937;
       padding: 80px 0;
       text-align: center;
     }
@@ -594,24 +595,36 @@
     }
 
     .contact-email {
-      color: white;
+      color: #1f2937;
       text-decoration: none;
       font-size: 1.1rem;
       font-weight: 500;
       padding: 0.8rem 1.5rem;
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.7);
       border-radius: 25px;
       display: inline-block;
       transition: all 0.3s ease;
-      border: 2px solid rgba(255, 255, 255, 0.3);
+      border: 2px solid rgba(148, 163, 184, 0.35);
     }
 
     .contact-email:hover {
-      background: rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.85);
       transform: translateY(-2px);
-      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-      color: white;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+      color: #1f2937;
       text-decoration: none;
+    }
+
+    .dark-theme .contact-email {
+      color: #f8fafc;
+      background: rgba(255, 255, 255, 0.15);
+      border: 2px solid rgba(255, 255, 255, 0.25);
+    }
+
+    .dark-theme .contact-email:hover {
+      background: rgba(255, 255, 255, 0.25);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+      color: #f8fafc;
     }
 
     /* Mobile responsiveness for contact section */
@@ -637,7 +650,59 @@
 
     /* Dark theme support for contact section */
     .dark-theme .contact-section {
-      background: linear-gradient(135deg, #4a5568 0%, #2d3748 100%);
+      background: linear-gradient(135deg, #1f3b70 0%, #12254a 100%);
+      color: white;
+    }
+
+    .support-section {
+      padding: 4rem 0;
+      background: linear-gradient(135deg, rgba(15, 23, 42, 0.96) 0%, rgba(30, 41, 59, 0.98) 100%);
+    }
+
+    .support-grid {
+      max-width: 720px;
+      margin: 0 auto;
+    }
+
+    .support-card {
+      background: rgba(30, 41, 59, 0.92);
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      border-radius: 18px;
+      padding: 2.25rem;
+      text-align: center;
+      box-shadow: 0 28px 60px -30px rgba(15, 23, 42, 0.6);
+      color: #e2e8f0;
+    }
+
+    .support-icon {
+      font-size: 2.4rem;
+      margin-bottom: 1rem;
+    }
+
+    .support-text {
+      color: #cbd5f5;
+      font-size: 1rem;
+      margin: 1rem 0 2rem;
+      line-height: 1.6;
+    }
+
+    .support-btn {
+      display: inline-block;
+      padding: 0.9rem 2.2rem;
+      border-radius: 999px;
+      background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
+      color: #f8fafc;
+      text-decoration: none;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 18px 35px -18px rgba(249, 115, 22, 0.55);
+    }
+
+    .support-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 22px 45px -20px rgba(249, 115, 22, 0.65);
+      color: #f8fafc;
     }
   </style>
 </head>
@@ -664,6 +729,7 @@
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
               <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
               <a href="pleb-release">📰 Pleb Release</a>
+              <a href="interest-arbitrage-calculator">💹 Yield Arbitrage</a>
               <a href="invoice-builder">🧾 Invoice Builder</a>
             </div>
           </div>
@@ -683,7 +749,6 @@
           Track your Bitcoin purchases, monitor portfolio performance, and make data-driven decisions.
         </p>
         <div class="hero-buttons">
-          <a href="invoice-builder" class="hero-btn primary">Create an Invoice</a>
           <a href="#features" class="hero-btn">Explore All Tools</a>
         </div>
       </div>
@@ -852,15 +917,21 @@
               <h4>Where to learn</h4>
               <a href="https://www.youtube.com/@bitcoinnotcrypto" target="_blank" class="affiliate-link">YouTube</a>
             </div>
-            <div class="affiliate-item">
-              <h4>Earn free BTC</h4>
-              <a href="https://satsarcade.app/" target="_blank" class="affiliate-link">Sats Arcade</a>
-            </div>
-            <div class="affiliate-item">
-              <h4>How to support</h4>
-              <a href="https://coinos.io/plebtools" target="_blank" class="affiliate-link">Donate</a>
-            </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="support-section">
+      <div class="container support-grid">
+        <div class="support-card">
+          <div class="support-icon">⚡</div>
+          <h2 class="section-title">Support Plebtools</h2>
+          <p class="support-text">
+            Enjoying these tools? You can help keep them free and open source by donating sats.
+            Every contribution fuels more Bitcoin-first development.
+          </p>
+          <a href="https://coinos.io/plebtools" target="_blank" class="support-btn">Donate ⚡</a>
         </div>
       </div>
     </section>
@@ -886,6 +957,18 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="features-section" style="padding: 4rem 0;">
+      <div class="container" style="text-align: center;">
+        <h2 class="section-title">Open Source</h2>
+        <p style="max-width: 680px; margin: 1.5rem auto; color: var(--text-muted, #475569);">
+          Plebtools is fully open source. Fork the code, submit improvements, or deploy your own instance to track Bitcoin operations your way.
+        </p>
+        <a href="https://github.com/ForrestHODL/Plebtools" target="_blank" class="feature-btn" style="display: inline-block;">
+          View on GitHub
+        </a>
       </div>
     </section>
 
